# tekito

./: README.md
aws-utils/: athena_download_ddl.sh  athena_execute_query.sh
digdag/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  local_init.sh
digdag/config/: client.conf  server.conf
digdag/digdag/: Dockerfile  client.properties  start_digdag.sh
digdag/nginx/: Dockerfile  nginx.conf  start_nginx.sh
digdag/projects/mydag/: mydag.dig  shared_dig  shared_script  shared_task
digdag/scripts/: local_init.sh  push_secrets.sh  push_workflows.sh  start_digdag.sh
digdag/shared/dig/: error_slack_notify.dig  sla_violation.dig
digdag/shared/digs/: common_env.dig
digdag/shared_dig/: common_env.dig  error_slack_notify.dig  sla_violation.dig
digdag/shared_script/: test.sh
go/: Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go  sqlc.yaml  test.json
go/lib/logging/: zap.go
go/lib/utils/: io.go  io_test.go
go/models/: models.go  mysql.user.sql.go
go/sqlc/queries/: mysql.user.sql
go/sqlc/schema/: mysql.user.sql
jupyter/: .gitignore  docker-compose.yml
oauth-reverse-proxy/: .air.toml  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go
oauth-reverse-proxy/dummy/: nginx.conf  traefik.yml
oauth-reverse-proxy/dummy/app1/: index.html
oauth-reverse-proxy/dummy/app2/: index.html  xxx.html
oauth-reverse-proxy/pkg/auth/: google.go  main.go
oauth-reverse-proxy/pkg/util/: str.go  (+1 more)
python/: Dockerfile  README.md  docker-compose.yml
python/app/: Makefile  main.py  pyproject.toml
(+4 files in other folders)
